note: 几个质量标准

--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -1007,3 +1007,144 @@ $$
 $$
 \frac{第一次编译前发现的缺陷个数}{第一次编译前注入的缺陷个数} \times 100 \%
 $$
+Yield 就是一种“过滤”，在计算过滤缺陷的效率
+
+通过**缺陷日志**（记录了注入阶段、消除阶段），就可以知道每个阶段注入、消除的缺陷。
+
+#### 作用
+
+知道各阶段 Yield 的意义：从质量管理角度，Yield 是非常有用的，如果缺陷密度比预期糟糕，就知道了改进的重点在哪
+
+一般要求 50% 就可以，但是考虑到如果每个阶段都 50% ，其实整体的将结果还是比较好的。
+
+告诉我们改进的机会。
+
+Yield **只能估算，不能度量**。因为遗留的缺陷数据是不知道的。
+
+### 质量控制指标：质检失效比 A/FR
+
+DLDR + CR / compile time + UT
+
+$$
+\frac{DLDR + CR (质检成本)}{compile\space time + UT(失效成本)}
+$$
+横坐标：质检失效比
+
+纵坐标：缺陷密度
+
+基本的达到 2 之后就没什么错误。
+
+A/FR **可以度量**
+
+#### 作用
+
+* 判断某模块的质量状态
+
+  了解质量状况，管理分配资源（质量低的需要更多测试），规划质量实践
+
+  * 测试策略
+
+    大爆炸，step by step
+
+    每个模块质量高时，big bang 效率最高
+
+    大量模块质量差时，big bang 难以定位错误
+
+    所以了解模块质量很有用
+
+* 规划质量计划
+
+  模块时间估计之后，还需要分配具体的时间
+
+  部分跟质量有关的实践的资源分配可以以此为依据。
+
+### 质量指标：PQI
+
+过程质量指标 Process Quality Index
+
+既有过程又有结果数据
+
+以下五个数据的乘积
+
+* 设计质量：设计的时间应该大于编码的时间
+
+  $$
+  Min\{\frac{DLD}{CODE}, 1\}
+  $$
+
+* 设计评审质量：设计评审的时间应该大于设计时间的 50%
+  $$
+  Min\{\frac{DLDR \times 2}{DLD}, 1\}
+  $$
+
+* 代码评审质量：代码评审时间应该大于编码时间的 50%
+  $$
+  Min\{\frac{CR \times 2}{CODE}, 1\}
+  $$
+  
+* 代码质量：代码的编译缺陷密度应当小于 10 个/千行
+  $$
+  Min\{\frac{20}{10 + UT}, 1\}
+  $$
+
+* 程序质量：代码单元测试缺陷密度应当小于 5 个/千行
+
+  $$
+  Min\{\frac{10}{5 + UT}, 1\}
+  $$
+  
+
+前三个是过程指标，后两个是结果指标
+
+任何一个是 0 结果肯定是 0
+
+横坐标 PQI，纵坐标缺陷密度。随着 PQI 增加，缺陷密度下降，PQI 到 0.4 之后基本就没有缺陷。
+
+#### 作用
+
+* 判断模块级别的开发质量
+
+* 帮助做质量规划（规划）
+
+* 为过程改进提供依据
+
+  哪个差就加哪个
+
+### 质量指标：评审速度
+
+PSP 要求速度小于 200 LOC/小时（一般正“常”评审时间的十分之一）
+
+### 质量指标：DRL
+
+Defect removal lavage
+
+$$
+\frac{某阶段每小时消除的缺陷数 }{UT}
+$$
+
+单元测试消除缺陷效率是差的，希望大于等于1
+
+### 其他因素
+
+* 打印后评审效率更好
+
+  脱离工作环境，避免工作环境影响。
+
+* 评审时机选择
+
+  先编译还是先评审？
+
+  编译器在 review 前后发现错误的能力是一样的，评审的目的是找出**所有的错误**，则代码是否编译过，**评审消耗的时间是几乎一样的**（也包括单元测试）。但是 review 是有机会找语法错误的，找到语法错误则可以缩短编译时间。即，先编译不减少 review 时间，先 review 减少编译时间。但是前提是 review 要试图找到所有的错误。
+
+* 个人评审、小组评审
+
+  先个人评审，后小组评审，对别人的投入的尊重。（不要给别人垃圾看）
+
+  传统上基于历史数据作为标准，比如，本次评审发现错误和历史错误数差不多，说明评审得，但是这是有问题得，是基于材料得质量水平、消除缺陷的能力是稳定的，然而这通常不成立。九宫图基于，材料质量、消除缺陷能力相对稳定。
+
+  类似于，标记重捕法来预测——capture-recapture. 和历史数据无关
+
+  近似：独立发现缺陷最多的是A，剩下的作为整体是B。人数越多，越可信
+
+
+
