--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -1146,5 +1146,178 @@ $$
 
   近似：独立发现缺陷最多的是A，剩下的作为整体是B。人数越多，越可信
 
+### 追求极高质量的手段
 
+* 各种测试
 
+* 进入测试前的产物质量提升
+
+  garbage in garbage out. 
+
+  测试不是提升软件质量的手段，而是检验软件质量状态的手段
+
+* 评审过程度量和稳定（指团队形式的评审）
+
+  Yield 像个滤纸，这里需要让 Yield 非常**稳定**，稳定则能够保证，多几层滤纸（多几次评审），结果非常可靠、稳定。稳定就是保证评审过程每次这个百分比差不多。
+
+  保证稳定的方法就是过程度量。
+
+* 质量意识和主人翁态度
+
+  大家都为质量负责
+
+* 个体 review 的度量和稳定
+
+  和 step 3 同理。
+
+  个人评审应该在团队评审之前。
+
+* 诉诸设计
+
+  从 step 3 开始，不再是找错误改正，而是从一开始就避免错误。
+
+* 缺陷预防
+
+  例如，根因分析（找到问题的根本原因）。
+
+* 用户质量观——其他质量属性
+
+  缺陷之上，其他的质量属性。缺陷解决之后，有精力解决其他问题，比如性能、安全等。
+
+为了更高的质量，有多种、多层次的手段。有顺序的，比如最开始就从测试开始。先后顺序是必须的，先做后面的是非常不合理的。
+
+### 设计与质量的关系
+
+* 设计是一个排错过程
+
+* 充分设计可以显著减少程序规模，提升质量
+
+  言多必失。
+
+### PSP 设计过程
+
+（图）
+
+设计不是线性的，是循环往复的过程。
+
+这不是试错。这是找到更准确、清晰的意图。
+
+#### 设计什么
+
+* 目标程序在整个应用系统中的位置
+
+* 目标程序的使用方式
+
+  用例、用例图。需求阶段产生，但其实是个设计
+
+* 与其他组件和模块间的关系
+
+* 外部可见的变量和方法
+
+* 内部运作机制
+
+* 内部静态逻辑
+
+#### 设计的内容
+
+|          | 动态信息               | 静态信息                     |
+| -------- | ---------------------- | ---------------------------- |
+| 外部信息 | 交互信息（服务消息等） | 功能（继承、类结构等）       |
+| 内部信息 | 行为信息（状态机）     | 结构信息（属性、业务逻辑等） |
+
+内部：工作方法、工作机制
+
+早晚都要考虑，早考虑更好。
+
+一个完整、可评审设计的最小集。
+
+有无足够信息判断设计是否有问题？缺失，则无法评审，是设计不足。
+
+#### PSP 设计模板
+
+OST FST SST LST
+
+#### OST 操作规格模板
+
+描述系统与外界的交互，描述用户在正常异常情况下的交互。
+
+#### FST 功能规格模板
+
+系统对外接口，静态星系的描述
+
+外部可见的属性和方法。
+
+可能用形式化符号描述方法等行为
+
+#### SST 状态规格模板
+
+程序所有状态、状态转换、转换时的动作
+
+内部、动态信息。
+
+#### LST 逻辑规格模板
+
+内部静态信息
+
+可以使用伪代码描述。
+
+伪代码可能一句对应一长段，更加简介，设计从更高层次、整体的角度来进行。
+
+### UML 常用图
+
+* 用例图
+* 时序图
+* 类图
+* 状态机图
+
+#### UML 和 PSP 设计模板的关系
+
+* 用例图、时序图提供了 PSP 中 OST 同样的信息
+
+* UML 时序图和类图所描述的类间关系以及对象之间的交互信息在 PSP 4 个设计模板中没有对应内容。
+
+* UML 类图中记录的方法型构（signature），但是方法的行为没有描述，后者在 PSP 的 FST 中有相应的内容。
+
+  型构（signature）：返回值类型、参数类型、参数顺序
+
+* LST 描述静态逻辑，UML 中没有方法
+
+* UML 状态图和 SST 的状态图类似，但是 SST 中关于状态、状态转换、动作，没有对应的 UML 图示方法。
+
+  SST 要求列出所有状态，两两之间的关系
+
+### 设计的层次：PSP 模板
+
+系统需求和用户需求的差别是什么？
+
+系统需求 = 用户需求，用户需要什么
+
+产品需求：用来做什么。通过 FST OST 进行
+
+高层设计：系统内部工作机制。通过 LST SST 进行
+
+模块需求
+
+模块规格说明——模块工作机制——模块源码。
+
+### 设计验证方法
+
+设计也可能引入错误，需要进行验证。
+
+设计验证范围非常广（相对于代码）
+
+#### 状态机验证
+
+什么是正确的状态机？
+
+* 消除死循环和陷阱状态
+
+* 转换条件的完整性和正交性
+
+  完整性：从 A 出发的所有条件组合被考虑到。
+
+  正交性：从 A 到 B 必须要求同样条件（组合），B 唯一。
+
+* 评价状态机是否体现设计意图
+
+真值表进行判断。
