note: 集成结束；配置开始

--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -1321,3 +1321,296 @@ OST FST SST LST
 * 评价状态机是否体现设计意图
 
 真值表进行判断。
+
+#### 执行表验证
+
+#### 跟踪表验证
+
+* 尽可能使用符号化。符号化能将特例变为一般情况下正确。**避免特例**
+
+* 优化用例组合
+
+除此之外，跟踪表和执行表一样，是在其基础上进行优化
+
+#### 正确性检验
+
+当作数学定理，形式化推理验证。
+
+对复杂的结构用跟踪表辅助
+
+#### While - do 正确性
+
+* condition 最终一定会变成 False（循环可以结束）
+
+* condition False 时，循环体内所有变量是否未被修改
+
+  循环控制变量可以在循环体产生其他作用，为假的时候不能改变
+
+* condition True 时，单独循环结构与循环体再加一个循环结构执行结果必须一致
+
+  ```python
+  # 1
+  while condition:
+      states
+      
+  # 2
+  while condition:
+      states
+      while condition:
+          states
+  
+  # 1 and 2 should be the same.
+  ```
+
+# 团队工程开发
+
+* 团队需求开发
+* 团队设计
+* 团队实现
+* 团队集成
+* 开发工作中验证和确认
+
+## 需求开发
+
+一切工程活动的基础
+
+### 类别
+
+* 客户需求
+* 产品需求
+* 产品组件需求
+
+后二者只是范围和规模的差异。
+
+客户需求是客户要解决的**问题**。围绕问题可以有多限制，这都是问题的一部分。
+
+产品需求是**解决方案**。
+
+### 需求获取
+
+试图找到客户所面临的问题
+
+诱导
+
+### 需求汇总
+
+* 整理多来源信息，识别缺失信息
+
+* 解决冲突的需求
+
+  责任推给开发方是更有可能的。
+
+* 需求整理和转化
+
+  转化：客户需求转化为产品需求
+
+* 推导未显式描述的需求内容
+
+### 需求验证
+
+对需求进行分析和确认，确保符合使用者预期。
+
+* 建立操作概念和相关的场景
+
+  例如，选课是一个操作概念，若干个概念串起来就是一个操作场景，也叫用例。
+
+* 分析需求
+
+  操作概念和操作场景下的解决方案。不建立起操作概念和操作场景则没有意义。
+
+* 确认需求
+
+  客户签字毫无意义。
+
+  确认是一系列的活动。
+
+### 需求文档制作
+
+需求文档是必要的文档。
+
+#### 好的需求文档的特征
+
+* 内聚特征
+
+* 完整特征
+
+  不完整，就不可评审，无法判断对错
+
+* 源自特征
+
+* 可跟踪特征
+
+* ……
+
+#### SRS （模板）
+
+通过模板确保不遗漏信息。
+
+## 团队设计
+
+设计过程和 PSP 基本一致
+
+需要额外考虑：
+
+* 团队智慧的使用
+
+  不同的人做不同的事情。尽可能让大家都
+
+* 设计标准
+
+* 设计复用
+
+* 设计的可测试支持
+
+  好的设计的要求。
+
+* 设计的可用性支持
+
+### 团队指挥
+
+挑战：
+
+* 确定整体架构之前很难分工
+* 鼓励成员在讨论和评审会议中的参与程度
+
+## 集成
+
+### 策略
+
+* 大爆炸集成
+
+  pros：每一个模块质量比较好时，最经济有效、最快的手段
+
+  cons：定位错误困难
+
+* 逐一添加集成
+
+  pros：定位错误简单
+
+  cons：不经济，成本高。第一个组件被测试的数量过多。
+
+  采取自动化手段（持续集成）
+
+  自动化测试无法测功能，只是单元测试或者单元测试 plus，本质上还是单元测试，对功能级别的问题无法发现。
+
+  质量要求高的时候，自动化测试也没什么用。
+
+* 集簇集成
+  
+  自底向上的策略。小的模块集簇，之后再把簇集成。
+  
+  cons：系统性错误只能在最后才被发现，这可能把前面的努力全部推翻
+  
+* 扁平化策略
+
+  打桩。
+
+  先把系统搭建起来，没有的模块用桩代替。系统的行为可以检测。
+  
+  集成时将打桩的模块逐步替换。
+  
+  合集簇相反，系统级错误尽早暴露，这也是缺点，固定的返回值，系统的描述非常单一。（比如，固定返回值是 True ，则另一半情况就被忽略了）
+
+实际上的集成会混合，情况复杂。例如，依赖于别人的某个组件。各组件的质量状况都非常不确定。
+
+通过集成计划来制定。
+
+## V & V 验证与确认
+
+验证 Verification
+
+确认 Validation
+
+#### 区别
+
+对比客户需求合产品需求
+
+验证（verification）保证**解决方案**被正确得实现，即产品是否和需求一致。（文档是否被正确得转化为了软件产品，即解决方案被实现）
+
+确认（validation）针对客户需求，检验客户的需求（问题）被解决了。确保开发完成的产品或组件在环境中工作正确。
+
+先保证解决方案被实现，再看是否解决了客户问题。
+
+**Validation** is the process of checking whether the specification captures the customer's needs, while **verification** is the process of checking that the software meets the specification.
+
+#### 常见软件开发流程属于哪个
+
+集成和单元测试属于验证。
+
+验收主要目的是判断用户的问题是否解决（应该是确认），通过功能的操作。
+
+需求评审是确认，基于操作概念、场景，判断设计的解决方案能否帮用户解决问题。
+
+| 验证（verification） | 确认（validation） |
+| -------------------- | ------------------ |
+| 集成测试             | 产品验收           |
+| 单元测试             | 需求评审           |
+
+大概上说，一头一尾确认，中间验证。
+
+正确的理解是，这两个活动**贯穿**于软件开发的**始终**。
+
+例如，验收测试中要通过参考解决方案的是否落实，尽管最终的结论是进行确认。
+
+不局限于缺陷消除的阶段。
+
+他们看起来差不多，但是**角度**不一样，所以结论不一样（方案被正确得实现了 or 用户的问题得到了很好的解决）
+
+### 验证和确认活动
+
+#### 环境准备
+
+真实环境很重要。不过很多情况下不可能是真实环境。很多情况下在真实环境进行测试造成灾难性后果。
+
+严格上要把场景的差异参数化，构建模型对模拟场景进行修正。
+
+验收必须要考虑环境
+
+#### 对象选择
+
+重要**工作产品**其中的子集——**产品**
+
+#### 结果分析
+
+获得基本的结论：质量是否过关。
+
+明确描述质量状况。
+
+# 项目支持活动
+
+* 配置管理
+* 度量和分析
+* 决策分析
+
+对所有其他的活动的支撑。
+
+## 配置管理
+
+确保管理对象，工作产品的完整性（integration）和一致性
+
+完整性不是指多、全面，而是强调一个整体。
+
+#### 基本概念
+
+* 配置项
+
+* 基线
+
+为了确保完整性，需要定义，“完整”需要哪些工作产品。例如，会议记录缺失了，产品也是完整的。即先定义完整的产品应该包含哪些内容，其中的每一项都叫做“配置项”。
+
+识别出来配置项，要确保在开发中配置项的修改需要经过审核不可以随意修改，以此确保完整、一致。
+
+识别配置项不是把所有东西都管控，而是去掉不那么重要的工作产品，限制配置项数量，只需要确保这些配置项是同步的。
+
+基线是配置项的组合，包含真实基线和基线计划。在到达某个时间点的时候包含了哪些配置项。在项目的开发进展的重要时间点（和里程碑一致），所有的确认的配置项的组合叫做基线。
+
+### 配置管理活动
+
+代码算一个配置项还是多个配置项？如果是一个配置项，则只允许串行修改，确保版本。一个极端是所有代码当一个配置项管理——只能串行修改。另一个是每个文件都是一个配置项，则太多，配置项的目的就是为了限制管理的产品数量。实际上主要按照**模块**划分，一个模块一个配置项。
+
+也由于进行了这种折中，所以可能发生错误，就需要进行配置审计。
+
+版本管理不是配置管理。变更请求很重要，是对配置项的变动进行的管控。
+
+完成单元测试就算是稳定版本，因为集成过程中需要配置管理。持续集成需要版本控制，因为每次未必成功，失败则需要回滚到之前成功的版本。
+
