--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -1614,3 +1614,207 @@ OST FST SST LST
 
 完成单元测试就算是稳定版本，因为集成过程中需要配置管理。持续集成需要版本控制，因为每次未必成功，失败则需要回滚到之前成功的版本。
 
+稳定的版本从工作库挪动到配置库，需要一定的权限，如配置管理委员会，其他人只能读取（checkout），控制对配置库的随意修改。
+
+### 度量与分析活动
+
+* 建立度量目标
+
+  度量什么，为什么要度量。
+
+* 制定度量方式
+
+  具体度量什么。例如，质量管理，具体来说，谁在什么时间节点做什么事情，保存在什么地方。
+
+* 制定数据收集和保存的流程
+
+  能否体现度量目标
+
+  能否保证数据的真实性
+
+### 决策分析
+
+技术选型时存在多种解决方案，有确定不是那么明显，但是问题对项目有很大的影响。
+
+评估标准体现了决策者的利益诉求。例如，成本权重大，说明最关心成本。
+
+## 根因分析和结局方案
+
+希望避免类似错误反复发生，把错误的根源解决。
+
+* 识别和选定问题
+
+  不是所有问题都适合根因分析，如比较小、罕见的问题。
+
+* 根因分析
+
+* 建立改进方案
+
+* 实施改进、评估效果
+
+### 鱼骨图
+
+不断地追问根本原因。
+
+典型角度：技术角度、人员角度、培训角度、过程角度
+
+# 定量管理和仿真建模
+
+过程的仿真和建模不是定量管理的唯一方式，（是常用方式）。
+
+仿真与建模不仅仅支持定量管理，也可能，如技术选型的决策。实际项目不会在现实进行检验，只能通过建模、仿真来辅助决策。
+
+## 高成熟度项目管理
+
+CMMI 中要求的高成熟度的管理，即定量管理
+
+initial, managed, defined, quantitatively managed, optimizing
+
+level 3 及以下都是不同的，level 4 及以上称为定量管理。
+
+level 4 关心消除偶发现象，使过程输出平稳，则对未来预测能力增强。过程的**稳定**
+
+level 5 对未来有很好的未来的前提下，发现结果不能满足要求，则需要整个的过程改进、调整。过程的期望水平
+
+### 一般的项目管理
+
+主要关心
+
+* 当前状况（**也可能使用数据**）
+* 是否需要调整干预
+
+通过已经发生的事情进行决策。
+
+例如，发现进度落后，则加班。
+
+无法回答必须进行预测的问题，如：
+
+* 维持现状，项目最后是否能成功
+
+  例如，进度偏差在 20% 之内，第一周 5%，第二周 10%，第三周 15%，是否需要干预？明显在增加的落后，不应该等到20% 再干预，所以这**不是定量管理**。所以说，一般项目管理无法回答维持现状有什么结果这样的问题。
+
+* 如果某方面进行调整，会有什么不同结果
+
+  流失了一个人，项目能否按时完成？如果不能，延期多少天？这样的问题也是无法回答的。
+
+定量管理有数据，有数据不一定是定量管理。定量管理必须要对未来在模型的基础上**预测**，根据预测结果干预。
+
+只讨论**当下的数据**，不能说是定量管理。
+
+只关注现状的方式，只能在小的项目中进行。
+
+### 定量的项目关系
+
+基于数据主要关心
+
+* 对当前状态的理解是否有足够的信息
+
+* 对偏差的理解
+
+  变化的
+
+回答典型问题：
+
+* 项目最后能否成功，有多大把握，是否需要预防
+* 如果某方面进行调整会有什么不同的结果
+
+### 为什么需要理解偏差
+
+把项目的概率密度画出来进行判断，计算在某时间内完成的概率。
+
+## 定量管理基本范式
+
+基本要素构建定量模型，在实际项目管理中应用
+
+通过多元回归的敏感分析，找到哪几个过程是最关键的。对选定的子过程构建能力基线，形成一个结构，用数学方法描述即过程模型
+
+构建定量模型：
+
+* 子过程能力基线
+* 过程模型
+
+应用模型：
+
+* 监控影响子过程的关键因素
+
+实际使用上，不是把大过程的目标输出作为监控对象，而是考察影响最大的一些基本要素（子过程）。通过一些手段控制子过程的性能，如果**关键子过程**都在预定范围内波动，则总的过程符合预期。
+
+### 基本概念
+
+#### （子）过程性能
+
+遵循某个特定的子过程之后产生结果的量化描述（按照过程操作了，则有一个数据取描述它），包括：过程度量Xi（例如，时间、缺陷消除效率），也包括产物度量Yi（如，缺陷目睹，相应时间等）
+$$
+Y=aX_i + b X_2 + cX_3 + d
+$$
+Y：需求评审消除的缺陷个数
+
+X1：需求文档的规模
+
+X2：参与评审的人员数量
+
+X3：速度
+
+这些都需要进行统计检验证明相关性。
+
+其中只有 X 能管控，Y 无法管控。
+
+最终这些度量影响子过程的输出。
+
+#### 子过程性能基线
+
+对上述过程性能的定量化刻画，一般包括均值和范围（一般用一个标准差），通常用作过程性能的 benchmark（只要用了这个过程就预期有这样的性能）。
+
+如，Xi 都在一定范围内，则 Y 也在一定范围。
+
+之前的配置管理基线和这里的基线是不一样的。前者指一个范围。这里的是 benchmark。
+
+#### 过程或子过程性能模型
+
+依据子过程的**逻辑关系**构建相应的数学模型，描述子过程性能基线和整体的过程的**有意义**的性能输出（如，质量、生产效率、成本等）之间的关系。
+
+例如，假设关注最终产品在验收测试的质量要求是千行1个错误以下。
+$$
+Z = a'Y_1 + b'Y_2 + c
+$$
+Y2是单元测试。发现这两个有显著影响，通过上面的公式，代表两个子过程，Z 代表整体目标。通过主观猜测加上统计检验判断哪些是关键子过程。
+
+需要控制 Z，则着眼点是 X，要让这些 X 在范围内波动。
+
+### 定量模型的关键实践
+
+* 选择关键子过程
+
+  * **有意义**的关键子过程
+
+    逻辑上看和管控的目标有关
+
+  * 可管控的子过程。
+
+    通过历史数据、回归判断
+
+* 为子过程建立度量定义
+
+* 分析子过程并建立能力基线（均值、上下限）
+
+  可能做一些排除。有数据，均值、上下限（标准差）总是有，但还是要做一些加工，例如，超过上下限的数据，做一些处理，把数据删掉（如果判断是一个偶然事件）。
+
+  最终目的要让上下限接近
+
+  这样给出了 Y X
+
+* 建立能力模型
+
+  Z Y 之间的关系。
+
+缺陷的注入和消除构建，假设
+
+需要可以获取的历史数据
+
+范围变化，如何处理
+
+消除效率（phase Yield），基于估算。
+
+注入阶段注入效率（不同阶段每小时注入缺陷数量；单位规模（每千行\页注入缺陷））。最终计算（假设为最终值）
+
+消除能力、注入，范围内波动，假定正态分布，计算均值标准差，描述每个数据的变量，每一个表示一个分布。用历史数据通过蒙特卡洛方法计算
