forget what's this

--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -1818,3 +1818,11 @@ Y2是单元测试。发现这两个有显著影响，通过上面的公式，代
 注入阶段注入效率（不同阶段每小时注入缺陷数量；单位规模（每千行\页注入缺陷））。最终计算（假设为最终值）
 
 消除能力、注入，范围内波动，假定正态分布，计算均值标准差，描述每个数据的变量，每一个表示一个分布。用历史数据通过蒙特卡洛方法计算
+
+### 定量模型的应用
+
+* 建立定量管理目标
+
+  如，缺陷密度低于 x
+
+  成本，日程，质量偏差
