update and fix some typo

--- a/黑铁矮人.md
+++ b/黑铁矮人.md
@@ -852,7 +852,7 @@ EVM是从零开始，燃尽图是从100开始（未完成的价值的变化）
 
 管理三要素：目标、状态、纠偏。
 
-如果不同用户由不同的质量体验，则管理三要素中，目标、状态都无法确定。
+如果不同用户有不同的质量体验，则管理三要素中，目标、状态都无法确定。
 
 ### PSP 质量定义
 
@@ -884,7 +884,7 @@ EVM是从零开始，燃尽图是从100开始（未完成的价值的变化）
 
 当涉及到质量**管理**时，很多这些质量都要舍弃。可以通过质量**活动**来提高，但是**管理**要求三点。
 
-单纯要求质量管理是做不到的
+单纯要求质量管理是做不到的。
 
 ### PSP 质量策略
 
@@ -1033,6 +1033,8 @@ $$
 纵坐标：缺陷密度
 
 基本的达到 2 之后就没什么错误。
+
+高 A/FR 代表高质量，不过如果过高，说明评审过多，开发效率下降。
 
 A/FR **可以度量**
 
@@ -1193,10 +1195,12 @@ $$
 * 充分设计可以显著减少程序规模，提升质量
 
   言多必失。
+  
+* 低劣的设计是导致在软件开发中返工、不易维护以及用户不满的主要原因
 
 ### PSP 设计过程
 
-（图）
+![](D:\PublicFile\软件过程\图片1.png)
 
 设计不是线性的，是循环往复的过程。
 
@@ -1243,7 +1247,7 @@ OST FST SST LST
 
 #### FST 功能规格模板
 
-系统对外接口，静态星系的描述
+系统对外接口，静态信息的描述
 
 外部可见的属性和方法。
 
@@ -1322,7 +1326,31 @@ OST FST SST LST
 
 真值表进行判断。
 
+#### 符号化执行验证
+
+将逻辑规格（一般用伪代码表示）用代数符号表示，然后系统得分析和验证。
+
+实施简单，有时候是唯一提供全面验证的方式。
+
+不适合复杂逻辑唱歌。
+
+手工验证可能引入人为错误
+
 #### 执行表验证
+
+有序的方法跟踪伪代码程序执行状况。
+
+* 识别伪码程序的关键变量；
+
+* 构建表格，表格左侧填入主要程序步骤，右侧填入关键变量；
+
+* 初始化被选定的变量；
+
+* 跟踪被选择的关键变量的变化情况，从而判断程序行为。
+
+pros: 适用于复杂逻辑验证，实施简单结果可靠。
+
+cons: 每次只能一个用例；人工检验耗时、容易出错
 
 #### 跟踪表验证
 
@@ -1331,6 +1359,8 @@ OST FST SST LST
 * 优化用例组合
 
 除此之外，跟踪表和执行表一样，是在其基础上进行优化
+
+执行表只能验证单独用例，跟踪表通过符号化、用例识别，对程序一般化行为验证。
 
 #### 正确性检验
 
@@ -1389,7 +1419,9 @@ OST FST SST LST
 
 试图找到客户所面临的问题
 
-诱导
+限制也应作为关注点
+
+诱导：不仅仅是普通的需求采集，要更积极、前瞻得识别客户没有明确提供的额外需求
 
 ### 需求汇总
 
@@ -1427,6 +1459,8 @@ OST FST SST LST
 
 需求文档是必要的文档。
 
+用户和软件开发者对软件的初始规定有个共同的理解。
+
 #### 好的需求文档的特征
 
 * 内聚特征
@@ -1435,7 +1469,7 @@ OST FST SST LST
 
   不完整，就不可评审，无法判断对错
 
-* 源自特征
+* 原子特征
 
 * 可跟踪特征
 
@@ -1472,6 +1506,73 @@ OST FST SST LST
 * 确定整体架构之前很难分工
 * 鼓励成员在讨论和评审会议中的参与程度
 
+### 设计标准
+
+* 命名规范
+
+  统一的命名规范来命名各个模块并建立系统词典。约定系统的架构类型和名称
+
+* 接口标准
+
+  包括一些设计原则，如高内聚低耦合，约束模块间信息交互方式。
+
+* 系统出错信息
+
+* 设计表示标准
+
+  设计工作的产物应当满足的标准
+
+  最为重要的一项内容
+
+### 复用性支持
+
+设计阶段充分考虑复用的可能。为了支持复用，需要建立一套复用管理流程。
+
+* 复用接口标准
+
+* 复用文档标准
+
+  提供可复用组件的支持文档。为复用文档定义统一的模板和标准。
+
+* 复用质量保证机制
+
+  复用组件可能被多处使用，因此其质量非常重要。需要用高质量过程开发。
+
+复用不是偶然发生的，需要在项目早期加以考虑。Design For Reuse. 
+
+### 可测试性考虑
+
+* 尽可能减少测试代码数量
+
+  合理的架构可以减少测试代码数量。
+
+* 制作合理的测试计划
+
+  充分开展测试计划，可以在计划阶段发现很多缺陷。
+
+### 可用性考虑
+
+* 可用性需要在设计阶段开始考虑
+* 对每个关键功能定义操作概念和操作场景
+* 分析操作场景以确保系统开发完成后用户会满意
+* 必要时可以邀请最终用户参与场景评审，使用模拟、原型等技术把握用户真实意图。
+
+### 设计的文档化
+
+## 实现策略
+
+* 评审的考虑
+
+  设计时为了整体观，一般自顶向下。为了便于评审，建议采用自底向上实现。
+
+* 复用策略
+
+  为了进一步支持复用，需要的一些其他实践。如，统一的注释格式，开头提供复用信息，站立会议
+
+* 可测试性考虑
+
+  实现的计划必须与测试计划一致，从而避免进行集成测试的时候，部分模块没有实现所带来的不便
+
 ## 集成
 
 ### 策略
@@ -1480,7 +1581,7 @@ OST FST SST LST
 
   pros：每一个模块质量比较好时，最经济有效、最快的手段
 
-  cons：定位错误困难
+  cons：定位错误困难。系统越复杂，越严重。
 
 * 逐一添加集成
 
@@ -1498,6 +1599,8 @@ OST FST SST LST
   
   自底向上的策略。小的模块集簇，之后再把簇集成。
   
+  pros: 改进了大爆炸继承。尽早获得一些可以工作的组件
+  
   cons：系统性错误只能在最后才被发现，这可能把前面的努力全部推翻
   
 * 扁平化策略
@@ -1508,7 +1611,7 @@ OST FST SST LST
   
   集成时将打桩的模块逐步替换。
   
-  合集簇相反，系统级错误尽早暴露，这也是缺点，固定的返回值，系统的描述非常单一。（比如，固定返回值是 True ，则另一半情况就被忽略了）
+  和集簇相反，系统级错误尽早暴露，这也是缺点，固定的返回值，系统的描述非常单一。（比如，固定返回值是 True ，则另一半情况就被忽略了）
 
 实际上的集成会混合，情况复杂。例如，依赖于别人的某个组件。各组件的质量状况都非常不确定。
 
@@ -1569,6 +1672,12 @@ OST FST SST LST
 
 重要**工作产品**其中的子集——**产品**
 
+验证活动的对象往往从工作产品中选择而确认活动的对象则从产品中选择
+
+#### 活动实施
+
+主要就是评审和测试。
+
 #### 结果分析
 
 获得基本的结论：质量是否过关。
@@ -1580,6 +1689,7 @@ OST FST SST LST
 * 配置管理
 * 度量和分析
 * 决策分析
+* 鱼骨图和根因分析
 
 对所有其他的活动的支撑。
 
